# llm-council

./: pyproject.toml  start.sh
backend/: main.py
frontend/src/: api.js
